--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,19 @@
     <!-- 插入jquery -->
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"/>
     <script type=text/javascript>
+        function getFormatDate() {
+            var nowDate = new Date();
+            var year = nowDate.getFullYear();
+            var month = nowDate.getMonth() + 1 < 10 ? "0" + (nowDate.getMonth() + 1) : nowDate.getMonth() + 1;
+            var date = nowDate.getDate() < 10 ? "0" + nowDate.getDate() : nowDate.getDate();
+            var hour = nowDate.getHours() < 10 ? "0" + nowDate.getHours() : nowDate.getHours();
+            var minute = nowDate.getMinutes() < 10 ? "0" + nowDate.getMinutes() : nowDate.getMinutes();
+            var second = nowDate.getSeconds() < 10 ? "0" + nowDate.getSeconds() : nowDate.getSeconds();
+            return year + "-" + month + "-" + date + " " + hour + ":" + minute + ":" + second;
+        }
+
+        var str = getFormatDate();
+        $("#date").innerHTML=str;
     </script>
 </head>
 
@@ -13,6 +26,7 @@
 <p>
     This Is A Python Web Demo For Auto Deployment
 </p>
+<p id="date">test</p>
 <p>
     <button type="button" onclick="window.location.reload()">刷新</button>
 </p>
