--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 <p>
     This Is A Python Web Demo For Auto Deployment
 </p>
-<p id="date">test</p>
+<p id="date">test v1.1.3</p>
 <p>
     <button type="button" onclick="window.location.reload()">刷新</button>
 </p>
